gitops/applications/workloads/demo-service/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-service-ingress
  namespace: demo-service-development
  annotations:
    argocd.argoproj.io/sync-wave: "85"
    app.kubernetes.io/name: demo-service
    app.kubernetes.io/component: ingress
spec:
  entryPoints:
    - web
  routes:
    # Notice we removed the Host() matcher completely!
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: demo-service
          port: 80
